# samtrader

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOY.md  README.md  config.ini.example  queensland.lua  tickets.json
deploy/: Caddyfile  README.md  Vagrantfile  samtrader.service  test-rotation.sh  verify-deployment.sh
deploy/ansible/: inventory.ini  inventory.vagrant.ini  playbook.yml
deploy/ansible/roles/backup/defaults/: main.yml
deploy/ansible/roles/backup/tasks/: main.yml
deploy/ansible/roles/base/defaults/: main.yml
deploy/ansible/roles/base/tasks/: main.yml
deploy/ansible/roles/caddy/tasks/: main.yml
deploy/ansible/roles/caddy/templates/: Caddyfile.j2
deploy/ansible/roles/postgresql/defaults/: main.yml
deploy/ansible/roles/postgresql/meta/: main.yml
deploy/ansible/roles/postgresql/tasks/: main.yml
deploy/ansible/roles/samtrader/defaults/: main.yml
deploy/ansible/roles/samtrader/handlers/: main.yml
deploy/ansible/roles/samtrader/tasks/: main.yml
deploy/ansible/roles/samtrader/templates/: config.ini.j2
docs/: postgres_refactor.md  samtrader_phase1.md  samtrader_phase2.md  samtrader_reimplementation_trd.md  samtrader_review.md  samtrader_web_expansion_trd.md
oldsamtrader/: CMakeLists.txt  README.md  backtest_report.typ  my_config.ini
oldsamtrader/examples/: bollinger_bands.ini  config.ini  golden_cross_filtered.ini  momentum.ini  multi_code.ini  rsi_mean_reversion.ini  sma_crossover.ini
oldsamtrader/include/samtrader/: samtrader.h
oldsamtrader/include/samtrader/adapters/: file_config_adapter.h  postgres_adapter.h  typst_report_adapter.h
oldsamtrader/include/samtrader/domain/: backtest.h  code_data.h  execution.h  indicator.h  metrics.h  ohlcv.h  portfolio.h  position.h  rule.h  strategy.h  universe.h
oldsamtrader/include/samtrader/ports/: config_port.h  data_port.h  report_port.h
oldsamtrader/src/: main.c
oldsamtrader/src/adapters/: file_config_adapter.c  postgres_adapter.c  typst_report_adapter.c
oldsamtrader/src/domain/: code_data.c  execution.c  indicator.c  indicator_atr.c  indicator_bollinger.c  indicator_ema.c  indicator_macd.c  indicator_pivot.c  indicator_rsi.c  indicator_sma.c  indicator_stochastic.c  indicator_wma.c  metrics.c  ohlcv.c  portfolio.c  position.c  rule.c  rule_eval.c  rule_parser.c  universe.c
oldsamtrader/test/: test_backtest.c  test_code_data.c  test_config.c  test_e2e.c  test_execution.c  test_indicator.c  test_indicator_calc.c  test_metrics.c  test_ohlcv.c  test_portfolio.c  test_position.c  test_postgres.c  test_report.c  test_rule.c  test_rule_eval.c  test_rule_parser.c  test_universe.c
prompts/: implement.md  resolve_conflict.md  review.md
scripts/: samtrader-backup.cron  samtrader-backup.sh  samtrader-rotate-backups.sh  test-backup-rotation.sh
src/: cli.rs  lib.rs  main.rs
src/adapters/: csv_adapter.rs  file_config_adapter.rs  html_report_adapter.rs  mod.rs  postgres_adapter.rs  sqlite_adapter.rs
src/adapters/typst_report/: chart_svg.rs  default_template.rs  mod.rs  tables.rs
src/adapters/web/: auth.rs  error.rs  handlers.rs  mod.rs  templates.rs
src/domain/: backtest.rs  code_data.rs  config_validation.rs  error.rs  execution.rs  indicator_helpers.rs  metrics.rs  mod.rs  ohlcv.rs  portfolio.rs  position.rs  rule.rs  rule_eval.rs  rule_parser.rs  strategy.rs  universe.rs
src/domain/indicator/: bollinger.rs  ema.rs  macd.rs  mod.rs  obv.rs  roc.rs  rsi.rs  stddev.rs  wma.rs
src/ports/: config_port.rs  data_port.rs  mod.rs  report_port.rs
static/: style.css
templates/: backtest_form.html  base.html  dashboard.html  error.html  login.html  report.html  report_placeholder.html
tests/: cli_integration_test.rs  integration_test.rs  web_auth_test.rs  web_handler_test.rs
tests/common/: mod.rs
